--- a/ClassLibrary2/BUS.csproj
+++ b/ClassLibrary2/BUS.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HoaDonBUS.cs" />
-    <Compile Include="ThietBiBUS - Copy %283%29.cs" />
+    <Compile Include="CTHDBUS.cs" />
     <Compile Include="KhachHangBUS.cs" />
     <Compile Include="ThietBiBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
